<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    
    <TextView 
        android:text="@string/chose_debug_host"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>
    
    <Spinner 
        android:id="@+id/spinner_host"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>
    
    <TextView
        android:text="@string/chose_debug_ip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>
    
    <Spinner 
        android:id="@+id/spinner_ip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>
    
    <EditText
        android:id="@+id/ip_alias"
        android:hint="@string/hint_input_alias"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>
    
    <Button 
        android:id="@+id/start_debug"
        android:text="@string/start_debug"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>
    
    <Button 
        android:id="@+id/close_debug"
        android:text="@string/close_debug"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>
    
</LinearLayout>